tests/data/placebo/test_network_interface_nested_block_filter/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200, 
    "data": {
        "SecurityGroups": [
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "for apps", 
                "IpPermissions": [], 
                "GroupName": "web-tier", 
                "VpcId": "vpc-c3c27aba", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-d29623a3"
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "b3965223-9957-4cac-aa08-6d0ac80f001e", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:38:06 GMT"
            }
        }
    }
}
