tests/data/placebo/test_network_interface_nested_block_filter/ec2.DescribeSubnets_1.json
{
    "status_code": 200, 
    "data": {
        "Subnets": [
            {
                "AvailabilityZone": "us-east-1c", 
                "AvailableIpAddressCount": 250, 
                "DefaultForAz": false, 
                "Ipv6CidrBlockAssociationSet": [], 
                "VpcId": "vpc-c3c27aba", 
                "State": "available", 
                "MapPublicIpOnLaunch": false, 
                "SubnetId": "subnet-55061130", 
                "CidrBlock": "10.4.8.0/24", 
                "AssignIpv6AddressOnCreation": false
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "ef63665d-a972-4d37-abad-6bf38f68283a", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 15:38:05 GMT"
            }
        }
    }
}
